--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -761,7 +761,7 @@ Provisoire
 .btn {
   border-radius: 5px;
   padding: 9px 24px;
-  font-family: 'Arca Majora 3', Lato, sans-serif;
+  font-family: "Arca Majora 3", Lato, sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
@@ -1797,7 +1797,7 @@ ul#menu-2-bc4d358 .menu-item-121571>a {
 }
 
 .page-id-50.woocommerce-edit-account h3 {
-  font-family: 'Arca Majora 3';
+  font-family: "Arca Majora 3";
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -2785,7 +2785,7 @@ ul#menu-2-bc4d358 .menu-item-121571>a {
   }
 
   .total-commande-mobile {
-    font-family: 'Arca Majora 3', Lato, sans-serif;
+    font-family: "Arca Majora 3", Lato, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -2929,7 +2929,7 @@ hr {
 }
 
 .my-account-title {
-  font-family: 'Arca Majora 3', Lato, sans-serif;
+  font-family: "'Arca Majora 3", Lato, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 32px;
@@ -2952,7 +2952,7 @@ hr {
 }
 
 .woocommerce-MyAccount-navigation .is-active a {
-  font-family: 'Arca Majora 3' !important;
+  font-family: "Arca Majora 3" !important;
   font-style: normal;
   font-weight: 700 !important;
   font-size: 16px !important;
@@ -2969,7 +2969,7 @@ hr {
 }
 
 .entete-tab-commande div {
-  font-family: 'Arca Majora 3', Lato, sans-serif;
+  font-family: "Arca Majora 3", Lato, sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -3061,7 +3061,7 @@ hr {
   border-radius: 5px !important;
   border: none !important;
   color: #ffff !important;
-  font-family: 'Arca Majora 3', Lato, sans-serif;
+  font-family: "Arca Majora 3", Lato, sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -3096,7 +3096,7 @@ hr {
 }
 
 .woocommerce-Address-title.title .adresses h3 {
-  font-family: 'Arca Majora 3', Lato, sans-serif;
+  font-family: "Arca Majora 3", Lato, sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -3142,7 +3142,7 @@ hr {
 .wishlist-title h2 {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
-  font-family: 'Arca Majora 3', Lato, sans-serif;
+  font-family: "Arca Majora 3", Lato, sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
@@ -3156,7 +3156,7 @@ hr {
 .entete-tableau-favoris .product-name,
 .entete-tableau-favoris .product-price {
   width: 50%;
-  font-family: 'Arca Majora 3', Lato, sans-serif;
+  font-family: "Arca Majora 3", Lato, sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -3195,7 +3195,7 @@ hr {
 
 .tableau-favoris .product-price {
   width: 20%;
-  font-family: 'Arca Majora 3', Lato, sans-serif;
+  font-family: "Arca Majora 3", Lato, sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -3222,7 +3222,7 @@ hr {
   padding: 8px 15px !important;
   color: #ffff !important;
   text-decoration: none;
-  font-family: 'Arca Majora 3', Lato, sans-serif;
+  font-family: "Arca Majora 3", Lato, sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px
